Harden smart link integrity and runtime handling